Fix sweetalert alignment on mobile

--- a/packages/rocketchat-theme/client/imports/base.css
+++ b/packages/rocketchat-theme/client/imports/base.css
@@ -4648,12 +4648,8 @@ body:not(.is-cordova) {
 	}
 }
 
-.sweet-alert {
-	margin-left: -239px !important;
-
-	& .sa-input-error {
-		top: 19px;
-	}
+.sweet-alert .sa-input-error {
+	top: 19px;
 }
 
 @media all and (max-width: 540px) {
@@ -4801,6 +4797,10 @@ a + br.only-after-a {
 @media (width > 780px) {
 	.main-content {
 		transform: translateX(0) !important;
+	}
+
+	.sweet-alert {
+		margin-left: -239px !important;
 	}
 }
 
